--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,1 @@
-<app-switch-case></app-switch-case>
-<app-for-statement></app-for-statement>
-<app-if-statement></app-if-statement>
-<app-contact-form></app-contact-form>
+<app-todo></app-todo>
